--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blessed Raven - Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <style>
@@ -144,7 +144,7 @@
     <main>
         <div id="lore" class="content-section">
             <h2>Lore</h2>
-            <p>The Blessed Raven project is a cosmic journey, born from lucid dreams and divine encounters with non-human intelligences (NHIs). Guided by the cryptic clue "Ricochet 4356," revealed in a dream, the project seeks the key to immortality through the repair of damaged DNA, the harnessing of torus energy, and the exploration of the astral plane. The Torus Pyramid, a 1:100 scale replica of the Great Pyramid of Giza, stands as a beacon of ancient wisdom and modern innovation, located above the Waikato River in New Zealand. Here, the mysteries of Greek, Egyptian, and Druid traditions converge, honoring deities like Zeus, Aphrodite, Thoth, and Ra, while advancing humanity toward a new golden age.</p>
+            <p>The Blessed Raven project is a cosmic journey, born from lucid dreams and divine encounters with non-human intelligences (NHIs). Guided by the cryptic clue "Ricochet 4356," revealed in a dream, the project seeks the key to immortality through the repair of damaged DNA, the harnessing of torus energy, and the exploration of the astral plane. The Torus Pyramid, a sacred structure inspired by the Great Pyramid of Giza, stands as a beacon of ancient wisdom and modern innovation, located above the Clutha River / Mata-Au in New Zealand—a river historically significant to the Kāi Tahu for fishing and spiritual rituals. Within the Torus Pyramid, the Egyptian, Greek, and Druid mystery schools converge, honoring deities like Aphrodite, Zeus, Pan, Athena, Christ, and Thoth, while smaller pyramid replicas are available for home use to channel sacred energies.</p>
         </div>
         <div id="mission" class="content-section">
             <h2>Mission</h2>
@@ -155,12 +155,12 @@
             <p>Dive into the mysteries of the Blessed Raven project through our interconnected initiatives:</p>
             <ul>
                 <li><strong><a href="family-tree.html" style="color: #ffd700; text-decoration: none;">Sacred Family Tree:</a></strong> Discover the divine lineage of Jacob, tracing back to Zeus, Aphrodite, King David, and the Earth Goddess Gaia.</li>
-                <li><strong><a href="immortality.html" style="color: #ffd700; text-decoration: none;">Immortality:</a></strong> Explore the quest for eternal life through DNA repair and the "Ricochet 4356" clue.</li>
-                <li><strong><a href="pyramids.html" style="color: #ffd700; text-decoration: none;">Torus Pyramid:</a></strong> Learn about the sacred structure harnessing magnetic fields to power a new era of enlightenment.</li>
-                <li><strong><a href="astral-game.html" style="color: #ffd700; text-decoration: none;">Astral Game:</a></strong> Journey through the astral plane in a groundbreaking VR experience, enhanced by the Med Bed.</li>
-                <li><strong><a href="med-beds.html" style="color: #ffd700; text-decoration: none;">Med Beds:</a></strong> Discover the technology that heals the body and mind using light, sound, and bioresonance.</li>
-                <li><strong><a href="theory-of-everything.html" style="color: #ffd700; text-decoration: none;">Theory of Everything:</a></strong> Unify science and spirituality through the principles of torus energy and sacred geometry.</li>
-                <li><strong><a href="torus-energy.html" style="color: #ffd700; text-decoration: none;">Torus Energy:</a></strong> Understand the universal energy pattern that powers life, consciousness, and the cosmos.</li>
+                <li><strong><a href="immortality.html" style="color: #ffd700; text-decoration: none;">Immortality:</a></strong> Fund research into DNA repair and preserve your genome on the blockchain.</li>
+                <li><strong><a href="pyramids.html" style="color: #ffd700; text-decoration: none;">Torus Pyramid:</a></strong> Learn about the sacred structure and its mystery schools, plus smaller replicas for home use.</li>
+                <li><strong><a href="astral-game.html" style="color: #ffd700; text-decoration: none;">Astral Game:</a></strong> Journey through the astral plane in a groundbreaking VR experience.</li>
+                <li><strong><a href="med-beds.html" style="color: #ffd700; text-decoration: none;">Med Beds:</a></strong> Discover the technology that heals the body and mind using light and sound.</li>
+                <li><strong><a href="theory-of-everything.html" style="color: #ffd700; text-decoration: none;">Theory of Everything:</a></strong> Unify science and spirituality through sacred geometry.</li>
+                <li><strong><a href="torus-energy.html" style="color: #ffd700; text-decoration: none;">Torus Energy:</a></strong> Understand the universal energy pattern that powers life and consciousness.</li>
                 <li><strong><a href="donate.html" style="color: #ffd700; text-decoration: none;">Donate:</a></strong> Support the Blessed Raven project and join us in shaping the future of humanity.</li>
             </ul>
         </div>
